--- a/assets/css/design-system.css
+++ b/assets/css/design-system.css
@@ -179,31 +179,31 @@ html.dark-mode {
 
 /* Button Variants - All with white text for visibility */
 .btn-primary {
-  background-color: #0066cc !important;
-  border-color: #0066cc !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   color: #ffffff !important;
 }
 
 .btn-primary:hover:not(:disabled) {
-  background-color: #0052a3 !important;
-  border-color: #0052a3 !important;
+  background-color: #333333 !important;
+  border-color: #333333 !important;
   color: #ffffff !important;
 }
 
 .btn-primary:active:not(:disabled) {
-  background-color: #003d7a !important;
-  border-color: #003d7a !important;
+  background-color: #1a1a1a !important;
+  border-color: #1a1a1a !important;
   color: #ffffff !important;
 }
 
 .btn-secondary {
-  background-color: #0066cc !important;
-  border-color: #0066cc !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   color: #ffffff !important;
 }
 
 .btn-secondary:hover:not(:disabled) {
-  background-color: #0052a3 !important;
+  background-color: #333333 !important;
   color: #ffffff !important;
 }
 
@@ -252,35 +252,36 @@ html.dark-mode {
 }
 
 .btn-dark {
-  background-color: #0066cc !important;
-  border-color: #0066cc !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   color: #ffffff !important;
 }
 
 .btn-dark:hover:not(:disabled) {
-  background-color: #0052a3 !important;
+  background-color: #333333 !important;
+  border-color: #333333 !important;
   color: #ffffff !important;
 }
 
 .btn-outline-primary {
   background-color: transparent !important;
-  border-color: #0066cc !important;
-  color: #0066cc !important;
+  border-color: #000000 !important;
+  color: #000000 !important;
 }
 
 .btn-outline-primary:hover:not(:disabled) {
-  background-color: #0066cc !important;
+  background-color: #000000 !important;
   color: #ffffff !important;
 }
 
 .btn-outline-dark {
   background-color: transparent !important;
-  border-color: #0066cc !important;
-  color: #0066cc !important;
+  border-color: #000000 !important;
+  color: #000000 !important;
 }
 
 .btn-outline-dark:hover:not(:disabled) {
-  background-color: #0066cc !important;
+  background-color: #000000 !important;
   color: #ffffff !important;
 }
 
